Java 9 support, Part I
See #300